// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb renders using ajax-loaded object data (multiple parents with common grandparent) 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <FetchContextProvider>
      <Breadcrumbs
        pid="foo:1234"
      >
        <ul>
          <li
            key="foo:1233foo:1233"
          >
            <Link
              to="/edit/object/foo:1233"
            >
              <LinkAnchor
                href="/edit/object/foo:1233"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:1233"
                  onClick={[Function]}
                >
                  Fake Parent 1
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:1231foo:1231"
          >
            <Link
              to="/edit/object/foo:1231"
            >
              <LinkAnchor
                href="/edit/object/foo:1231"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:1231"
                  onClick={[Function]}
                >
                  Fake Parent 2
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </ul>
      </Breadcrumbs>
    </FetchContextProvider>
  </Router>
</BrowserRouter>
`;

exports[`Breadcrumb renders using ajax-loaded object data (simple case) 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <FetchContextProvider>
      <Breadcrumbs
        pid="foo:1234"
      >
        <ul>
          <li
            key="foo:1233foo:1233"
          >
            <Link
              to="/edit/object/foo:1233"
            >
              <LinkAnchor
                href="/edit/object/foo:1233"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:1233"
                  onClick={[Function]}
                >
                  Fake Parent
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </ul>
      </Breadcrumbs>
    </FetchContextProvider>
  </Router>
</BrowserRouter>
`;
